changed to Vorshau

--- a/src/app/algorithmus/algorithmus.html
+++ b/src/app/algorithmus/algorithmus.html
@@ -113,7 +113,7 @@
 </section>
 
 <button (click)="openDialog()" type="submit" [disabled]="!algorithmusForm.valid">
-  Rechnung erstellen
+  Vorschau
 </button>
 
 <section
