--- a/src/app/shared/invoice/invoice.html
+++ b/src/app/shared/invoice/invoice.html
@@ -36,31 +36,31 @@
         <tr>
             <td>Grundgebühr</td>
             <td></td>
-            <td>{{algorithmusControl.basicFeeProvision | number:'1.2-2'}} €</td>
+            <!-- <td>{{algorithmusControl.basicFeeProvision | number:'1.2-2'}} €</td> -->
         </tr>
         <tr>
             <td>Individuelle Express Krypto-Einführung</td>
-            <td>{{algorithmusControl.firstStepProvision | number:'1.2-2'}} %</td>
+            <!-- <td>{{algorithmusControl.firstStepProvision | number:'1.2-2'}} %</td> -->
             <td>180.00 €</td>
         </tr>
         <tr>
             <td>Börsenwahl & Einrichtung</td>
-            <td>{{algorithmusControl.exchangeSetupProvision | number:'1.2-2'}} %</td>
+            <!-- <td>{{algorithmusControl.exchangeSetupProvision | number:'1.2-2'}} %</td> -->
             <td>300.00 €</td>
         </tr> 
         <tr>
             <td>Kaufstrategie & Coin-Auswahl</td>
-            <td>{{algorithmusControl.buyStrategyProvision | number:'1.2-2'}} %</td>
+            <!-- <td>{{algorithmusControl.buyStrategyProvision | number:'1.2-2'}} %</td> -->
             <td>300.00 €</td>
         </tr>
         <tr>
             <td>Wallet-Einrichtung & Sicherheit</td>
-            <td>{{algorithmusControl.walletSetupProvision | number:'1.2-2'}} %</td>
+            <!-- <td>{{algorithmusControl.walletSetupProvision | number:'1.2-2'}} %</td> -->
             <td>300.00 €</td>
         </tr>
         <tr>
             <td>Steuertool für deine Abwicklung</td>
-            <td>{{algorithmusControl.taxToolProvision| number:'1.2-2'}} %</td>
+            <!-- <td>{{algorithmusControl.taxToolProvision| number:'1.2-2'}} %</td> -->
             <td>300.00 €</td>
         </tr>
         </tbody>
