invoice service and createInvoice()

--- a/src/app/algorithmus/algorithmus.html
+++ b/src/app/algorithmus/algorithmus.html
@@ -122,7 +122,7 @@
   <button (click)="openDialog()" type="submit">
     Vorschau
   </button>
-  <button (click)="openDialog()" type="submit" [disabled]="!algorithmusForm.valid">
+  <button (click)="createInvoice()" type="submit" [disabled]="!algorithmusForm.valid">
     Erstellen
   </button>
 </div>
